fixed tab name jump

--- a/apis/client/view/header/header.less
+++ b/apis/client/view/header/header.less
@@ -22,7 +22,7 @@
 
 .view-api-navigation {
   position: relative;
-  top: 1px;
+  top: 2px;
   margin-top: 2em;
   clear: both;
 
@@ -32,6 +32,7 @@
 
   .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
     font-weight: bold;
+    line-height: initial;
     color: #333;
     background-color: #fff;
     border-top-color: @brand-primary;
